--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     <body>
       Hello there, awesome person!
-        <img src="https://avatars2.githubusercontent.com/u/51921104?v=4">
+        <img src=https://avatars2.githubusercontent.com/u/51921104?v=4>
   </body>
   
 </html>
