added links to sites
I added the links to the sites

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
       Hello there, awesome person!
         <ul>
-            <li> github.com </li>
-            <li> youtube.com </li>
-            <li> instagram.com </Li>
+            <li> My favorite site is <a> href="https://github.com"> gihub.com </a> !</li>
+            <li> and <a> href="https://www.youtube.com"> youtube.com <a> </li>
+            <li> and last but not least <a> href="https://www.instagram.com"> instagram.com <a> ! </Li>
         </ul>
         <img src=https://avatars2.githubusercontent.com/u/51921104?v=4>
   </body>
